# prevcloud

./: Cargo.toml  README.md  architecture.md  config.json
migrations/2023-06-04-171505_create_user/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: common.rs  create_user.rs  login.rs  mod.rs
src/config/: config.rs
src/database/: database.rs
