[package]
name = "prevcloud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["multipart", "tokio"] }
diesel = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
